[package]
edition = "2018"
name = "blue"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
env_logger = "0.9"
log = "0.4"
prost = "0.8.0"
serde_json = "1"
structopt = "0.3"
tokio = {version = "1.12", features = ["full"]}

[build-dependencies]
prost-build = {version = "0.8.0"}

[[bin]]
name = "store"
path = "src/bin/store.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
